--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,21 @@ IF(CMAKE_COMPILER_IS_GNUCXX)
 ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
 
+SET(HAS_EIGEN3 0)
+
+INCLUDE(FindPkgConfig OPTIONAL)
+IF(PKG_CONFIG_FOUND)
+	INCLUDE(FindPkgConfig)
+	PKG_CHECK_MODULES(PKG_EIGEN3 eigen3)	# Find eigen3 with pkg-config
+	IF(PKG_EIGEN3_FOUND)
+		MESSAGE(STATUS "Using eigen3 in: ${PKG_EIGEN3_INCLUDE_DIRS}")
+		INCLUDE_DIRECTORIES(${PKG_EIGEN3_INCLUDE_DIRS})
+		SET(HAS_EIGEN3 1)
+	ENDIF(PKG_EIGEN3_FOUND)
+ENDIF(PKG_CONFIG_FOUND)
+
+
+
 
 # Include dir:
 INCLUDE_DIRECTORIES(${nanoflann_SOURCE_DIR}/include)
