--- a/nanoflann.pc.in
+++ b/nanoflann.pc.in
@@ -1,4 +1,4 @@
-prefix=@CMAKE_INSTALL_PREFIX@
+prefix=@nanoflann_pkgconfig_INSTALL_PREFIX@
 exec_prefix=${prefix}
 libdir=${exec_prefix}/lib@LIB_SUFFIX@
 includedir=${prefix}/include
@@ -10,5 +10,5 @@ Requires:
 Version: @NANOFLANN_VERSION_MAJOR@.@NANOFLANN_VERSION_MINOR@.@NANOFLANN_VERSION_PATCH@
 Libs:
 Libs.private:
-Cflags:
+Cflags: -I${includedir}
 
