GTest sources are now embedded, due to the changes in newer Ubuntu packages which don't carry the precompiled libs.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,9 @@
 # ----------------------------------------------------------------------------
 PROJECT(tests)
 
+# Compile gtest from sources:
+add_subdirectory(gtest-1.6.0)
+
 SET(EXECUTABLE_OUTPUT_PATH "${${PROJECT_NAME}_BINARY_DIR}")
 
 # -----------------------------
