* Added a security check to launch an exception if searches are attempted before buildIndex(). * New example to demonstrate save/load the index to files. * save/load methods exposed as public.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,6 +3,7 @@
 ADD_EXECUTABLE(pointcloud_example pointcloud_example.cpp)
 ADD_EXECUTABLE(pointcloud_kdd_radius pointcloud_kdd_radius.cpp)
 ADD_EXECUTABLE(pointcloud_adaptor_example pointcloud_adaptor_example.cpp)
+ADD_EXECUTABLE(saveload_example saveload_example.cpp)
 
 IF(HAS_EIGEN3)
 	ADD_EXECUTABLE(matrix_example matrix_example.cpp)
