avoid clash with a possible previous gtest target

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,9 +8,11 @@ if(MSVC)
 	add_definitions(-D_VARIADIC_MAX=10)
 endif(MSVC)
 
-# Compile gtest from sources:
-add_subdirectory(gtest-1.6.0)
-INCLUDE_DIRECTORIES("gtest-1.6.0/fused-src")
+IF(NOT TARGET gtest)
+	# Compile gtest from sources:
+	add_subdirectory(gtest-1.6.0)
+	INCLUDE_DIRECTORIES("gtest-1.6.0/fused-src")
+ENDIF(NOT TARGET gtest)
 
 SET(EXECUTABLE_OUTPUT_PATH "${${PROJECT_NAME}_BINARY_DIR}")
 
