--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,8 +5,8 @@ ADD_EXECUTABLE(pointcloud_kdd_radius pointcloud_kdd_radius.cpp)
 ADD_EXECUTABLE(pointcloud_adaptor_example pointcloud_adaptor_example.cpp)
 ADD_EXECUTABLE(saveload_example saveload_example.cpp)
 
-IF(HAS_EIGEN3)
+IF(EIGEN3_FOUND)
 	ADD_EXECUTABLE(matrix_example matrix_example.cpp)
 	ADD_EXECUTABLE(vector_of_vectors_example vector_of_vectors_example.cpp)
-ENDIF(HAS_EIGEN3)
+ENDIF()
 
