copyright years update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # ----------------------------------------------------------------------------
 # Root CMake file for nanoflann
 #
-#  2011 - Jose Luis Blanco 
+#  2011-2016 - Jose Luis Blanco 
 # ----------------------------------------------------------------------------
 cmake_minimum_required(VERSION 2.6)
 
