--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -38,11 +38,10 @@ ENDIF (UNIX)
 ADD_EXECUTABLE(unit_tests test_main.cpp)
 
 # Add the required libraries for linking:
-TARGET_LINK_LIBRARIES(unit_tests gtest)
+TARGET_LINK_LIBRARIES(unit_tests gtest nanoflann)
 
 # Run it:
-GET_TARGET_PROPERTY(GENERATED_EXE unit_tests LOCATION)
-ADD_CUSTOM_TARGET(run_tests COMMAND "${GENERATED_EXE}" "${${PROJECT_NAME}__SOURCE_DIR}")
+ADD_CUSTOM_TARGET(run_tests COMMAND "$<TARGET_FILE:unit_tests>" "${${PROJECT_NAME}__SOURCE_DIR}")
 ADD_DEPENDENCIES(run_tests unit_tests)
 ADD_DEPENDENCIES(test run_tests)
 
