Updated examples/CMakeLists.txt to compile dynamic_pointcloud_example.cpp

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -19,6 +19,8 @@ ENDIF()
 
 # examples:
 ADD_EXECUTABLE(dynamic_pointcloud_example dynamic_pointcloud_example.cpp)
+TARGET_LINK_LIBRARIES(dynamic_pointcloud_example nanoflann)
+
 ADD_EXECUTABLE(pointcloud_example pointcloud_example.cpp)
 TARGET_LINK_LIBRARIES(pointcloud_example nanoflann)
 
