Replaced SO3_InnerProdQuat_adaptor by SO3_adaptor

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -28,7 +28,7 @@ DEFINE_EXAMPLE(dynamic_pointcloud_example)
 DEFINE_EXAMPLE(pointcloud_example)
 DEFINE_EXAMPLE(pointcloud_kdd_radius)
 DEFINE_EXAMPLE(pointcloud_adaptor_example)
-DEFINE_EXAMPLE(SO3_InnerProdQuat_adaptor_example)
+DEFINE_EXAMPLE(SO3_adaptor_example)
 DEFINE_EXAMPLE(SO2_adaptor_example)
 DEFINE_EXAMPLE(saveload_example)
 DEFINE_EXAMPLE(vector_of_vectors_example)
