use https for submodule
Git protocol seems to fail when git clone --recursive from Windows

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "flann"]
-	   path = 3rdparty/flann
-	   url = git@github.com:mariusmuja/flann.git
+path = 3rdparty/flann
+url = https://github.com/mariusmuja/flann.git
