Disable building benchmark by default
Not a real fix... but a workaround for 99% users. 
Closes #53

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,7 @@ IF(BUILD_EXAMPLES)
 ENDIF()
 
 # Benchmarks
-OPTION(BUILD_BENCHMARKS "Build benchmarks" ON)
+OPTION(BUILD_BENCHMARKS "Build benchmarks" OFF)
 IF(BUILD_BENCHMARKS)
         # 3rdparty Libraries
         include(3rdparty/CMakeLists-flann.txt)
