--- a/scripts/nanoflannConfig.cmake.in
+++ b/scripts/nanoflannConfig.cmake.in
@@ -1,7 +1,10 @@
 # - Config file for the nanoflann package
 # It defines the following variables
-#  nanoflann_INCLUDE_DIRS - include directories for FooBar
+#  nanoflann_INCLUDE_DIRS - include directories for nanoflann
 
 # Compute paths
 get_filename_component(nanoflann_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
 set(nanoflann_INCLUDE_DIRS "@CONFIG_INCLUDE_DIRS@")
+
+# Our library dependencies (contains definitions for IMPORTED targets)
+include("${nanoflann_CMAKE_DIR}/nanoflannTargets.cmake")
