towards not setting cmake global executable build path
o This should be handled by the CMAKE_INSTALL_PREFIX definition, which
is user-defined.  Setting the global cmake leads to nasty side-effects
for other cmake projects that build nanoflann as a subdirectory.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,6 +5,8 @@ MACRO(DEFINE_EXAMPLE _NAME)
 	ADD_EXECUTABLE(${_NAME} ${_NAME}.cpp)
 	set_target_properties(${_NAME} PROPERTIES FOLDER "Examples")
 	TARGET_LINK_LIBRARIES(${_NAME} nanoflann::nanoflann)  # adds the "#include" directory.
+  install(TARGETS ${_NAME}
+          DESTINATION examples)
 ENDMACRO()
 
 DEFINE_EXAMPLE(dynamic_pointcloud_example)
